Correction of the arrow's rotation in the About page when open a collapse

--- a/kasa/src/styles/Apropos.scss
+++ b/kasa/src/styles/Apropos.scss
@@ -36,10 +36,10 @@ main {
                 right: 30px;
                 transform: rotate(0);
                 transition: transform 0.3s ease;
+            }
 
-                &.open {
-                    transform: rotate(180deg);
-                }
+            &.open:after {
+                transform: rotate(180deg);
             }
         }
     }
